--- a/src/components/Paper/index.module.scss
+++ b/src/components/Paper/index.module.scss
@@ -7,6 +7,6 @@
   max-width: var(--paper-width);
   width: var(--paper-width);
   height: var(--paper-height);
-  padding: 30px;
+  padding: 60px 50px 60px 70px;
   filter: drop-shadow(-15px 15px 30px rgba(0, 0, 0, 70%));
 }
