--- a/src/components/Background/index.module.scss
+++ b/src/components/Background/index.module.scss
@@ -1,36 +1,42 @@
 .background {
   z-index: -1;
   position: fixed;
-  background-color: var(--accent2);
-  min-height: 100vh;
+  background-color: var(--accent-background);
+  height: 100vh;
   width: 100vw;
 }
 
 .leftAngle {
-  clip-path: polygon(40vw 0, 0 0, 0 40vh);
+  clip-path: polygon(0 0, 40vw 0, 0 40vh);
+  top: 0;
+  left: 0;
 
-  &Wrapper {
-    top: 0;
-    left: 0;
-    filter: drop-shadow(10px 5px 25px rgba(0, 0, 0, 50%));
+  &Parallelepiped {
+    clip-path: polygon(30vw 0, 40vw 0, 0 40vh, 0 30vh);
+
+    &Wrapper {
+      top: 0;
+      left: 0;
+      filter: drop-shadow(10px -5px 10px  rgba(0, 0, 0, 50%));
+    }
   }
 }
 
 .rightAngle {
-  clip-path: polygon(98vw 0, 100vw 0, 100vw 100vh, 0 100vw, 0 98vh);
+  clip-path: polygon(98vw 0, 100vw 0, 100vw 100vh, 0 100vh, 0 98vh);
   bottom: 0;
   right: 0;
 }
 
-.leftAngleWrapper, .rightAngle {
+.leftAngle, .rightAngle, .leftAngleParallelepipedWrapper {
   position: absolute;
 }
 
-.leftAngle, .leftAngleWrapper, .rightAngle {
+.leftAngle, .rightAngle, .leftAngleParallelepiped, .leftAngleParallelepipedWrapper {
   height: 100%;
   width: 100%;
 }
 
-.leftAngle, .rightAngle {
+.leftAngle, .rightAngle, .leftAngleParallelepiped {
   background-color: var(--gray-background);
 }
