add english and socials

--- a/src/app/[locale]/index.module.scss
+++ b/src/app/[locale]/index.module.scss
@@ -3,7 +3,7 @@
 
   &Time, &State {
     white-space: pre-line;
-    margin-top: 10px;
+    margin-block-start: 10px;
     font: var(--typography-text-paragraph-small);
   }
 
