add profile section

--- a/src/components/Subhead/index.module.scss
+++ b/src/components/Subhead/index.module.scss
@@ -1,4 +1,9 @@
-.root {
+.small {
   font: var(--typography-subhead-small);
   color: var(--gray1);
+}
+
+.medium {
+  font: var(--typography-subhead-medium);
+  color: var(--gray2);
 }
