--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -27,6 +27,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
     padding: 0;
     border: 0;
     font: inherit;
+    color: inherit;
     vertical-align: baseline;
     text-rendering: optimizelegibility;
     -webkit-font-smoothing: antialiased;
